--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
-# Core Dependencies
-fastapi==0.116.1
-uvicorn==0.35.0
-streamlit==1.49.1
-python-dotenv==1.1.1
-pandas==2.3.2
-
-# Machine Learning / NLP
-torch==2.8.0
-transformers==4.56.1
-sentencepiece==0.2.1
-
-# spaCy and Model
-spacy==3.8.7
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
-
-# Utilities
-beautifulsoup4==4.13.5
-requests==2.32.5
-tqdm==4.67.1
+fastapi
+uvicorn
+requests
+streamlit
+python-dotenv
+pandas
+spacy
+beautifulsoup4
