Fix: use latest torch + transformers for Railway

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi
 uvicorn
-transformers==4.56.1
-torch==2.7.1+cpu --index-url https://download.pytorch.org/whl/cpu
-pydantic
+transformers
+torch
+sentencepiece
+pandas
+python-dotenv
 requests
-beautifulsoup4
-streamlit
+
