--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-transformers==4.56.1
-torch==2.7.1
-sentencepiece==0.2.1
-pandas==2.3.2
-python-dotenv==1.0.1
-requests==2.32.3
+streamlit
+transformers
+torch
+sentencepiece
+pandas
+python-dotenv
+requests
